# arris

./: .gitignore  ATTRIBUTION.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  frontend.yml  rust.yml
crates/arris-engines/: Cargo.toml
crates/arris-engines/src/: app.rs  lib.rs
crates/arris-engines/src/agent/: constants.rs  errors.rs  impl_agent_engine.rs  impl_cli_resolver.rs  mod.rs  types.rs
crates/arris-engines/src/agent/providers/: claude.rs  codex.rs  mod.rs
crates/arris-engines/src/canvas/: constants.rs  errors.rs  impl_canvas_engine.rs  impl_cell_cache_writer.rs  impl_cell_result_cache.rs  impl_spill_cipher.rs  impl_spill_writer.rs  mod.rs  types.rs
crates/arris-engines/src/connection/: errors.rs  impl_connection_engine.rs  impl_ssh_tunnel.rs  mod.rs  types.rs
crates/arris-engines/src/dbt/: constants.rs  errors.rs  impl_column_lineage_extractor.rs  impl_dbt_cli_runner.rs  impl_dbt_engine.rs  impl_diff_sql_builder.rs  mod.rs  types.rs
crates/arris-engines/src/dbt/test_fixtures/: catalog.json  manifest.json  run_results.json
crates/arris-engines/src/drivers/: constants.rs  errors.rs  mod.rs  sql_builder.rs  tls.rs  types.rs  unimplemented.rs  uri.rs
crates/arris-engines/src/drivers/bigquery/: constants.rs  definition.rs  driver.rs  mod.rs  query.rs  schema.rs
crates/arris-engines/src/drivers/clickhouse/: constants.rs  explain.rs  mod.rs  query.rs  values.rs
crates/arris-engines/src/drivers/common/: explain.rs  impl_arrow_chunk_builder.rs  impl_mysql_wire_stream.rs  impl_row_chunk_pump.rs  mod.rs  schema.rs  sql_parser.rs
crates/arris-engines/src/drivers/duckdb/: definition.rs  mod.rs  query.rs  schema.rs  values.rs
crates/arris-engines/src/drivers/dynamodb/: convert.rs  mod.rs
crates/arris-engines/src/drivers/elasticsearch/: constants.rs  mod.rs  query.rs  schema.rs
crates/arris-engines/src/drivers/kafka/: constants.rs  mod.rs  query.rs  schema_registry.rs  sql_parser.rs
crates/arris-engines/src/drivers/mixpanel/: api.rs  constants.rs  driver.rs  mod.rs  query.rs  schema.rs  sql_parser.rs
crates/arris-engines/src/drivers/mixpanel/sql_parser/: tests.rs
crates/arris-engines/src/drivers/mongodb/: explain.rs  mod.rs  mutation.rs  parser.rs  query.rs  schema.rs  sql.rs  tabular.rs  uri.rs
crates/arris-engines/src/drivers/mssql/: config.rs  definition.rs  mod.rs  query.rs  schema.rs  values.rs
crates/arris-engines/src/drivers/mysql/: config.rs  definition.rs  explain.rs  mod.rs  query.rs  schema.rs  values.rs
crates/arris-engines/src/drivers/oracle/: config.rs  definition.rs  mod.rs  values.rs
crates/arris-engines/src/drivers/postgres/: definition.rs  explain.rs  mod.rs  query.rs  values.rs
crates/arris-engines/src/drivers/redis/: format.rs  mod.rs  parser.rs  query.rs  schema.rs
crates/arris-engines/src/drivers/snowflake/: api.rs  constants.rs  definition.rs  mod.rs  schema.rs  values.rs
crates/arris-engines/src/drivers/sqlite/: definition.rs  mod.rs  query.rs  schema.rs  values.rs
crates/arris-engines/src/drivers/starrocks/: convert.rs  impl_starrocks_driver.rs  mod.rs  types.rs
crates/arris-engines/src/drivers/trino/: api.rs  mod.rs  schema.rs  values.rs
crates/arris-engines/src/editor/: impl_line_comment_prefix.rs  mod.rs
crates/arris-engines/src/federation/: errors.rs  impl_federated_table_provider.rs  impl_federation_engine.rs  impl_filter_translator.rs  impl_metrics_stream.rs  impl_plan_dag.rs  impl_scan_adapter.rs  mod.rs  types.rs
crates/arris-engines/src/file/: constants.rs  errors.rs  impl_file_engine.rs  mod.rs  types.rs
crates/arris-engines/src/git/: errors.rs  impl_git_engine.rs  mod.rs  types.rs
crates/arris-engines/src/logging/: constants.rs  errors.rs  impl_debug_log.rs  impl_debug_log_handle.rs  impl_debug_logging.rs  impl_gated_size_capped_writer.rs  impl_redactor.rs  mod.rs
crates/arris-engines/src/persistence/: errors.rs  impl_app_preferences_store.rs  impl_connections_store.rs  impl_console_tabs_store.rs  impl_data_paths.rs  impl_federation_tabs_store.rs  impl_json_store.rs  impl_keychain.rs  impl_pane_layout_store.rs  impl_pinned_queries_store.rs  impl_project_state.rs  impl_run_history_store.rs  mod.rs  types.rs
crates/arris-engines/src/python/: constants.rs  errors.rs  impl_kernel_session.rs  impl_python_engine.rs  impl_sql_cell.rs  impl_venv.rs  impl_venv_registry.rs  mod.rs  types.rs
crates/arris-engines/src/query/: errors.rs  impl_query_engine.rs  mod.rs  types.rs
crates/arris-engines/src/search/: constants.rs  errors.rs  impl_file_index.rs  impl_file_watcher.rs  impl_search_engine.rs  mod.rs  types.rs
crates/arris-engines/src/sqlmesh/: constants.rs  errors.rs  impl_sqlmesh_cli_runner.rs  impl_sqlmesh_engine.rs  mod.rs  types.rs
crates/arris-engines/src/terminal/: impl_terminal_engine.rs  mod.rs
crates/arris-engines/tests/: clickhouse_integration.rs  duckdb_integration.rs  elasticsearch_federation_integration.rs  elasticsearch_integration.rs  kafka_integration.rs  mongodb_integration.rs  mssql_integration.rs  mysql_integration.rs  oracle_integration.rs  postgres_integration.rs  redis_integration.rs  sqlite_integration.rs  ssh_tunnel_integration.rs  starrocks_integration.rs
crates/arris-engines/tests/dbt_diff_scenario/: mod.rs
crates/arris-engines/tests/streaming_scenario/: mod.rs
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/: env.d.ts
fixtures/: docker-compose.yml  embedded-init.sh
fixtures/initdb/: clickhouse.sql  dynamodb-init.sh  (+12 more)
frontend/: eslint.config.js  index.html  knip.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  helpers.rs  main.rs  watcher.rs
src-tauri/src/commands/: agent.rs  canvas.rs  connection.rs  constants.rs  dbt.rs  federation.rs  file.rs  git.rs  mod.rs  persistence.rs  project.rs  python.rs  query.rs  search.rs  sqlmesh.rs  terminal.rs
(+1127 files in other folders)
