[package]
name = "arris-engines"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Unified engine crate: types, drivers, persistence, connection, query, federation, AI, Git, Search, dbt, SQLMesh engines plus AppEnvironment."

[features]
default = ["postgres", "sqlite", "mongodb", "mysql", "kafka", "mixpanel", "redis", "mssql", "duckdb", "oracle", "elasticsearch", "bigquery", "snowflake", "trino", "clickhouse", "dynamodb", "starrocks"]
postgres = ["dep:tokio-postgres", "dep:bytes", "dep:tokio-postgres-rustls", "dep:rustls", "dep:rustls-pemfile", "dep:rustls-pki-types"]
sqlite = []
mongodb = ["dep:mongodb", "dep:futures-util"]
mysql = ["dep:mysql_async", "dep:rustls", "dep:async-stream"]
kafka = ["dep:rdkafka", "dep:reqwest"]
mixpanel = ["dep:reqwest"]
redis = ["dep:redis"]
mssql = ["dep:tiberius", "dep:futures-util"]
duckdb = ["dep:duckdb"]
oracle = ["dep:oracle-rs"]
elasticsearch = ["dep:reqwest"]
bigquery = ["dep:gcp-bigquery-client"]
snowflake = ["dep:reqwest"]
trino = ["dep:reqwest"]
clickhouse = ["dep:clickhouse"]
dynamodb = ["dep:aws-config", "dep:aws-sdk-dynamodb"]
# StarRocks speaks the MySQL wire protocol, so it reuses mysql_async + rustls.
starrocks = ["dep:mysql_async", "dep:rustls", "dep:async-stream"]

[dependencies]
# shared
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
indexmap.workspace = true
uuid.workspace = true
thiserror.workspace = true
chrono.workspace = true
url.workspace = true
percent-encoding.workspace = true
anyhow.workspace = true
base64 = "0.22"

# engines
dashmap = "6.1"
tokio-util = { version = "0.7", features = ["compat"] }
# python console: jupyter kernel protocol over pure-rust zeromq (no system libzmq)
jupyter-protocol = "2.0.1"
jupyter-zmq-client = { version = "1.0.0", default-features = false, features = ["tokio-runtime", "ring"] }
tempfile = "3.27"
sha2 = "0.10"
gix = { version = "0.85", default-features = false, features = ["max-performance-safe", "sha1"] }
datafusion = "52.2"
futures = "0.3"
regex-lite = "0.1"
# encrypted on-disk spill of cached cell results (in-memory per-session key)
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
getrandom = "0.2"
dirs = "6"
# resolve agent CLIs (`claude`, `codex`) to an absolute path over an augmented
# search set, so a GUI-launched app with a minimal PATH still finds them.
which = "8.0"
nucleo = "0.5"
notify = "8.2"
notify-debouncer-full = "0.7"
sqlparser = "0.59"

# persistence
directories = "5"
keyring = { version = "3.6", default-features = false, features = ["apple-native", "linux-native", "windows-native"] }

# drivers: postgres / redshift
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"], optional = true }
bytes = { version = "1.7", optional = true }
# postgres TLS via rustls (ring provider, consistent with mysql_async)
tokio-postgres-rustls = { version = "0.13", optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"], optional = true }
rustls-pemfile = { version = "2", optional = true }
rustls-pki-types = { version = "1", optional = true }

# sqlite — used by engines (search index) and sqlite driver
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json", "column_decltype"] }

# drivers: mongodb
mongodb = { version = "3.6", default-features = false, features = ["rustls-tls", "dns-resolver", "bson-3", "compat-3-3-0"], optional = true }
futures-util = { version = "0.3", optional = true }

# drivers: mysql / mariadb
mysql_async = { version = "0.36", default-features = false, features = ["default-rustls-ring"], optional = true }
# lets the mysql row stream own its Conn across yields (mysql_async's result
# stream borrows the connection, so a plain owned stream is impossible).
async-stream = { version = "0.3", optional = true }

# drivers: kafka + mixpanel + elasticsearch (shared reqwest)
rdkafka = { version = "0.39", features = ["cmake-build", "ssl-vendored"], optional = true }
reqwest = { workspace = true, optional = true, features = ["stream"] }

# drivers: redis
redis = { version = "1.2", features = ["tokio-rustls-comp", "connection-manager"], optional = true }

# drivers: mssql
tiberius = { version = "0.12", default-features = false, features = ["rustls", "chrono", "tds73"], optional = true }

# drivers: duckdb
duckdb = { version = "1.10502", features = ["bundled"], optional = true }

# drivers: oracle
oracle-rs = { version = "0.1", optional = true }

# drivers: bigquery — pin features to drop unused native-tls/cloud-storage paths (rustls + ring only)
gcp-bigquery-client = { version = "0.28", default-features = false, features = ["rust-tls", "ring", "gzip"], optional = true }

# drivers: clickhouse — official ClickHouse/clickhouse-rs crate over HTTP, rustls TLS
clickhouse = { version = "0.13", default-features = false, features = ["lz4", "rustls-tls"], optional = true }
russh = "0.61.2"

# drivers: dynamodb — official AWS SDK for Rust, PartiQL over the DynamoDB API.
# Pin the hyper+rustls(ring) connector instead of the default aws-lc-rs client so
# we reuse the same ring crypto as every other driver (no aws-lc native build).
aws-config = { version = "1.8", default-features = false, features = ["rustls", "rt-tokio", "credentials-process", "sso", "behavior-version-latest"], optional = true }
aws-sdk-dynamodb = { version = "1.116", default-features = false, features = ["rustls", "rt-tokio", "behavior-version-latest"], optional = true }

# python console: send SIGINT to the kernel process for interrupt
[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal"] }

[dev-dependencies]
tempfile = "3.27"
rcgen = "0.13"
# Raw HTTP for bulk-seeding the Elasticsearch streaming tests (the engine's
# native path trims the trailing newline the _bulk API requires).
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres", "mysql", "mariadb", "mongo", "redis", "elastic_search", "kafka", "mssql_server", "clickhouse"] }
